refactor(assets): reorganiza imagens em /assets/imgs/{pizzas,esfihas,sushis,bebidas,bordas}; atualiza cardapio.html e script.js

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -86,7 +86,7 @@
       <h3 style="margin:6px 0 10px">🍱 Combinados</h3>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/combinado1.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/combinado1.webp" alt="Produto" loading="lazy">
           <h3>Combinado 01 <small>(12 peças)</small></h3>
           <ul>
             <li>4 Hot de Filadélfia</li>
@@ -98,7 +98,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 01 (12 peças)', 31.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/combinado2.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/combinado2.webp" alt="Produto" loading="lazy">
           <h3>Combinado 02 <small>(12 peças)</small></h3>
           <ul>
             <li>4 Hot de Camarão</li>
@@ -109,7 +109,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 02 (12 peças)', 35.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/combinado3.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/combinado3.webp" alt="Produto" loading="lazy">
           <h3>Combinado 03 <small>(14 peças)</small></h3>
           <ul>
             <li>2 Uramakis de Salmão</li>
@@ -121,7 +121,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 03 (14 peças)', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/combinado4.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/combinado4.webp" alt="Produto" loading="lazy">
           <h3>Combinado 04 <small>(19 peças)</small></h3>
           <ul>
             <li>2 Uramakis de Salmão</li>
@@ -134,7 +134,7 @@
           <button class="btn btn-add" onclick="addToCart('Combinado 04 (19 peças)', 47.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/combinado5.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/combinado5.webp" alt="Produto" loading="lazy">
           <h3>Combinado 05 <small>(26 peças)</small></h3>
           <ul>
             <li>4 Uramakis de Salmão</li>
@@ -154,28 +154,28 @@
       <h2 style="margin:18px 0 10px">🐙 Temakis <small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/tsalmao.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/tsalmao.webp" alt="Produto" loading="lazy">
           <h3>Salmão</h3>
           <p>Cones de alga com arroz e salmão.</p>
           <span class="price">R$ 37,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/tsalmaogrelhado.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/tsalmaogrelhado.webp" alt="Produto" loading="lazy">
           <h3>Salmão Grelhado</h3>
           <p>Salmão grelhado no cone de alga com arroz.</p>
           <span class="price">R$ 37,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Salmão Grelhado', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/tpolvo.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/tpolvo.webp" alt="Produto" loading="lazy">
           <h3>Polvo</h3>
           <p>Polvo selecionado com arroz no cone de alga.</p>
           <span class="price">R$ 37,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Polvo', 37.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/tcamarao.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/tcamarao.webp" alt="Produto" loading="lazy">
           <h3>Camarão</h3>
           <p>Camarão com arroz no cone de alga crocante.</p>
           <span class="price">R$ 37,90</span>
@@ -186,28 +186,28 @@
       <h2 style="margin:18px 0 10px">🌮 Sushidog</h2>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
           <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão Grelhado</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
           <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Camarão</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
           <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Polvo</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
@@ -221,37 +221,37 @@
       <h2 style="margin:18px 0 10px">Tradicionais <small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/esfirrami.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirrami.webp" alt="Produto" loading="lazy">
           <h3>Mista</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Mista', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirrafr.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirrafr.webp" alt="Produto" loading="lazy">
           <h3>Frango</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Frango', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirramu.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirramu.webp" alt="Produto" loading="lazy">
           <h3>Mussarela</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Mussarela', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirracn.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirracn.webp" alt="Produto" loading="lazy">
           <h3>Carne Moída</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne Moída', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirracb.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirracb.webp" alt="Produto" loading="lazy">
           <h3>Calabresa</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Calabresa', 3.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirramg.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirramg.webp" alt="Produto" loading="lazy">
           <h3>Marguerita</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Marguerita', 3.90, 1)">Adicionar</button>
@@ -262,25 +262,25 @@
       <h2 style="margin:18px 0 10px">Especiais<small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/esfirracm.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirracm.webp" alt="Produto" loading="lazy">
           <h3>Camarão</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Camarão', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirracs.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirracs.webp" alt="Produto" loading="lazy">
           <h3>Carne de Sol</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne de Sol', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirrafc.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirrafc.webp" alt="Produto" loading="lazy">
           <h3>Frango com Catupiry</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Frango com Catupiry', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfirraqq.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfirraqq.webp" alt="Produto" loading="lazy">
           <h3>Quatro Queijos</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Quatro Queijos', 4.90, 1)">Adicionar</button>
@@ -290,25 +290,25 @@
       <h2 style="margin:18px 0 10px">Doces<small style="color:#8b8d94"></small></h2>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/esfihabr.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfihabr.webp" alt="Produto" loading="lazy">
           <h3>Brigadeiro</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Brigadeiro', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfihabn.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfihabn.webp" alt="Produto" loading="lazy">
           <h3>Banana</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Banana', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfihamm.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfihamm.webp" alt="Produto" loading="lazy">
           <h3>M & M</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha M & M', 4.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/esfiharj.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/esfihas/esfiharj.webp" alt="Produto" loading="lazy">
           <h3>Romeu & Julieta</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Romeu & Julieta', 4.90, 1)">Adicionar</button>
@@ -320,35 +320,35 @@
       <h1>🥤 Refrigerantes</h1>
       <div class="cards" id="cards-bebidas">
       <div class="card">
-        <img class="card-img" src="../imgs/cocalt.webp" alt="Produto" loading="lazy">
+        <img class="card-img" src="../imgs/bebidas/cocalt.webp" alt="Produto" loading="lazy">
         <h3>Coca-Cola 350ml</h3>
         <p>Coca-Cola 350ml.</p>
         <span class="price">R$ 6,90</span>
         <button class="btn btn-add" onclick="addToCart('Coca-Cola 350ml', 7.90, 1)">Adicionar</button>
       </div>
       <div class="card">
-        <img class="card-img" src="../imgs/cocaltzr.webp" alt="Produto" loading="lazy">
+        <img class="card-img" src="../imgs/bebidas/cocaltzr.webp" alt="Produto" loading="lazy">
         <h3>Coca-Cola Zero 350ml</h3>
         <p>Coca-Cola Zero 350ml.</p>
         <span class="price">R$ 6,90</span>
         <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 350ml', 7.90, 1)">Adicionar</button>
       </div>
         <div class="card">
-          <img class="card-img" src="../imgs/coca1l.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/bebidas/coca1l.webp" alt="Produto" loading="lazy">
           <h3>Coca-Cola 1L</h3>
           <p>Coca-Cola 1L.</p>
           <span class="price">R$ 9,90</span>
           <button class="btn btn-add" onclick="addToCart('Coca-Cola 1L', 9.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/coca1lzr.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/bebidas/coca1lzr.webp" alt="Produto" loading="lazy">
           <h3>Coca-Cola Zero 1L</h3>
           <p>Coca-Cola Zero 1L.</p>
           <span class="price">R$ 9,90</span>
           <button class="btn btn-add" onclick="addToCart('Coca-Cola Zero 1L', 9.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/guarana1l.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/bebidas/guarana1l.webp" alt="Produto" loading="lazy">
           <h3>Guaraná 1L</h3>
           <p>Guaraná 1L.</p>
           <span class="price">R$ 9,90</span>
