Comment out card elements in cardapio.html
Comentar os cards dos itens Temaki de Salmão e Sushidog de Salmão a pedido do proprietário da pizzaria. - Realizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -152,14 +152,14 @@
       </div>
 
       <h2 style="margin:18px 0 10px">🐙 Temakis <small style="color:#8b8d94"></small></h2>
-      <div class="cards">
+      <!--<div class="cards">
         <div class="card">
           <img class="card-img" src="../imgs/sushis/tsalmao.webp" alt="Produto" loading="lazy">
           <h3>Salmão</h3>
           <p>Cones de alga com arroz e salmão.</p>
           <span class="price">R$ 37,90</span>
           <button class="btn btn-add" onclick="addToCart('Temaki de Salmão', 37.90, 1)">Adicionar</button>
-        </div>
+        </div>-->
         <div class="card">
           <img class="card-img" src="../imgs/sushis/tsalmaogrelhado.webp" alt="Produto" loading="lazy">
           <h3>Salmão Grelhado</h3>
@@ -185,13 +185,13 @@
 
       <h2 style="margin:18px 0 10px">🌮 Sushidog</h2>
       <div class="cards">
-        <div class="card">
+        <!--<div class="card">
           <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
           <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
-        </div>
+        </div>-->
         <div class="card">
           <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão Grelhado</h3>
