Atualização da nomenclatura dos Sushidogs nas comandas

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -190,28 +190,28 @@
           <h3>Sushidog de Salmão</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
-          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+          <button class="btn btn-add" onclick="addToCart('Sushidog de Salmão', 38.90, 1)">Adicionar</button>
         </div>-->
         <div class="card">
           <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão Grelhado</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
-          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+          <button class="btn btn-add" onclick="addToCart('Sushidog de Salmão Grelhado', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Camarão</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
-          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+          <button class="btn btn-add" onclick="addToCart('Sushidog de Camarão', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
           <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
           <h3>Sushidog de Polvo</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
-          <button class="btn btn-add" onclick="addToCart('Sushidog', 38.90, 1)">Adicionar</button>
+          <button class="btn btn-add" onclick="addToCart('Sushidog de Polvo', 38.90, 1)">Adicionar</button>
         </div>
       </div>
     </section>
