feat: Ocultando a section 'Sushi' e o pop-up promocional. - Realizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -81,7 +81,7 @@
       </section>
     </section>
 
-    <section class="secao" id="sushi">
+    <!-- <section class="secao" id="sushi">
       <h1>🍣 Sushis</h1>
 
       <h3 style="margin:6px 0 10px">🍱 Combinados</h3>
@@ -217,7 +217,7 @@
           <button class="btn btn-add" onclick="addToCart('Sushidog de Polvo', 38.90, 1)">Adicionar</button>
         </div>
       </div>
-    </section>
+    </section> -->
     
     <section class="secao" id="esfiha">
       <h1>🥟 Esfihas</h1>
