--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -30,7 +30,7 @@
 
     <nav class="main-nav" aria-label="Navegação principal">
       <a class="nav-link" href="#pizzas" data-target="pizzas" title="Pizzas">🍕<span>Pizzas</span></a>
-      <a class="nav-link" href="#sushi"  data-target="sushi"  title="Sushis">🍣<span>Sushis</span></a>
+      <!-- <a class="nav-link" href="#sushi"  data-target="sushi"  title="Sushis">🍣<span>Sushis</span></a> -->
       <a class="nav-link" href="#esfiha"  data-target="esfiha"  title="esfiha">🥟<span>Esfihas</span></a>
       <a class="nav-link" href="#bebidas"data-target="bebidas"title="Bebidas">🥤<span>Bebidas</span></a>
     </nav>
