feat: Inclusão de novas imagens na seção sushidog. - Realizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -187,14 +187,14 @@
       <h2 style="margin:18px 0 10px">🌮 Sushidog</h2>
       <div class="cards">
         <div class="card">
-          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog1.jpeg" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
           <button class="btn btn-add" onclick="addToCart('Sushidog de Salmão', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog2.jpeg" alt="Produto" loading="lazy">
           <h3>Sushidog de Salmão Grelhado</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
@@ -208,7 +208,7 @@
           <button class="btn btn-add" onclick="addToCart('Sushidog de Camarão', 38.90, 1)">Adicionar</button>
         </div>
         <div class="card">
-          <img class="card-img" src="../imgs/sushis/sushidog.webp" alt="Produto" loading="lazy">
+          <img class="card-img" src="../imgs/sushis/sushidog.jpeg" alt="Produto" loading="lazy">
           <h3>Sushidog de Polvo</h3>
           <p>Clássico da casa.</p>
           <span class="price">R$ 38,90</span>
