feat: Inclusão do novo produto H2O na seção Bebidas. - Realizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -321,6 +321,13 @@
       <div class="cards" id="cards-bebidas">
       <div class="card">
         <img class="card-img" src="../imgs/bebidas/cocalt.webp" alt="Produto" loading="lazy">
+        <h3>H2O 500ml</h3>
+        <p>H2O 500ml.</p>
+        <span class="price">R$ 6,90</span>
+        <button class="btn btn-add" onclick="addToCart('H2O 500ml', 6.90, 1)">Adicionar</button>
+      </div>
+      <div class="card">
+        <img class="card-img" src="../imgs/bebidas/cocalt.webp" alt="Produto" loading="lazy">
         <h3>Coca-Cola 350ml</h3>
         <p>Coca-Cola 350ml.</p>
         <span class="price">R$ 6,90</span>
