feat: Inclusão do novo produto H2O na seção Bebidas. - Realizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -320,7 +320,7 @@
       <h1>🥤 Refrigerantes</h1>
       <div class="cards" id="cards-bebidas">
       <div class="card">
-        <img class="card-img" src="../imgs/bebidas/cocalt.webp" alt="Produto" loading="lazy">
+        <img class="card-img" src="../imgs/bebidas/h2o.webp" alt="Produto" loading="lazy">
         <h3>H2O 500ml</h3>
         <p>H2O 500ml.</p>
         <span class="price">R$ 6,90</span>
