chore: Ocultar o sabor de carne de sol das esfihas. - Realizado por Rodolpho Rapôso.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -267,12 +267,12 @@
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Camarão', 4.90, 1)">Adicionar</button>
         </div>
-        <div class="card">
+        <!-- <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirracs.webp" alt="Produto" loading="lazy">
           <h3>Carne de Sol</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne de Sol', 4.90, 1)">Adicionar</button>
-        </div>
+        </div> -->
         <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirrafc.webp" alt="Produto" loading="lazy">
           <h3>Frango com Catupiry</h3>
