feat: atualização do cardápio.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -81,7 +81,7 @@
       </section>
     </section>
 
-    <!-- <section class="secao" id="sushi">
+    <section class="secao" id="sushi"> -->
       <h1>🍣 Sushis</h1>
 
       <h3 style="margin:6px 0 10px">🍱 Combinados</h3>
@@ -215,7 +215,7 @@
           <button class="btn btn-add" onclick="addToCart('Sushidog de Polvo', 38.90, 1)">Adicionar</button>
         </div>
       </div>
-    </section> -->
+    </section>
     
     <section class="secao" id="esfiha">
       <h1>🥟 Esfihas</h1>
@@ -267,12 +267,12 @@
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Camarão', 4.90, 1)">Adicionar</button>
         </div>
-        <!-- <div class="card">
+        <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirracs.webp" alt="Produto" loading="lazy">
           <h3>Carne de Sol</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne de Sol', 4.90, 1)">Adicionar</button>
-        </div> -->
+        </div>
         <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirrafc.webp" alt="Produto" loading="lazy">
           <h3>Frango com Catupiry</h3>
