--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -81,7 +81,7 @@
       </section>
     </section>
 
-    <section class="secao" id="sushi"> -->
+    <!-- <section class="secao" id="sushi">
       <h1>🍣 Sushis</h1>
 
       <h3 style="margin:6px 0 10px">🍱 Combinados</h3>
@@ -215,7 +215,7 @@
           <button class="btn btn-add" onclick="addToCart('Sushidog de Polvo', 38.90, 1)">Adicionar</button>
         </div>
       </div>
-    </section>
+    </section> -->
     
     <section class="secao" id="esfiha">
       <h1>🥟 Esfihas</h1>
@@ -239,12 +239,12 @@
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Mussarela', 3.90, 1)">Adicionar</button>
         </div>
-        <!-- <div class="card">
+        <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirracn.webp" alt="Produto" loading="lazy">
           <h3>Carne Moída</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne Moída', 3.90, 1)">Adicionar</button>
-        </div> -->
+        </div>
         <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirracb.webp" alt="Produto" loading="lazy">
           <h3>Calabresa</h3>
@@ -540,7 +540,7 @@
   </div>
 
   <footer>
-    <small>&copy; 2025 - <a href="https://portfolioraposoofc.vercel.app" style="text-decoration: none; color: #fff;">Rapôso Web Dev</a> | Todos os direitos reservados.</small>
+    <small>&copy; 2025 - <a href="https://rodolphoraposo.vercel.app" style="text-decoration: none; color: #fff;">Rapôso Web Dev</a> | Todos os direitos reservados.</small>
   </footer>
 
   <div id="comanda-digital"></div>
