feat: atualização do cardápio.

--- a/assets/html/cardapio.html
+++ b/assets/html/cardapio.html
@@ -239,12 +239,12 @@
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Mussarela', 3.90, 1)">Adicionar</button>
         </div>
-        <div class="card">
+        <!-- <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirracn.webp" alt="Produto" loading="lazy">
           <h3>Carne Moída</h3>
           <span class="price">R$ 3,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha de Carne Moída', 3.90, 1)">Adicionar</button>
-        </div>
+        </div> -->
         <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfirracb.webp" alt="Produto" loading="lazy">
           <h3>Calabresa</h3>
@@ -307,12 +307,12 @@
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha M & M', 4.90, 1)">Adicionar</button>
         </div>
-        <div class="card">
+        <!-- <div class="card">
           <img class="card-img" src="../imgs/esfihas/esfiharj.webp" alt="Produto" loading="lazy">
           <h3>Romeu & Julieta</h3>
           <span class="price">R$ 4,90</span>
           <button class="btn btn-add" onclick="addToCart('Esfiha Romeu & Julieta', 4.90, 1)">Adicionar</button>
-        </div>
+        </div> -->
       </div>
     </section>
     
